# pumpkin-pi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/pumpkin_pi/: __init__.py  __main__.py  blinker.py
src/pumpkin_pi/hal/: __init__.py  gpio.py  gpio_mock.py
tests/: test_blinker.py
