[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pumpkin-pi"
version = "0.1.0"
description = "Simple Raspberry Pi scaffold with simulated GPIO"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name" }
]
dependencies = [
    "mypy>=1.18.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.13.0",
]

[project.optional-dependencies]
rpi = ["gpiozero>=1.6.2"]
dev = [
    "pytest",
    "pre-commit",
    "black",
    "ruff",
    "isort",
]
pi-dependencies = [
    "gpiozero",
    "smbus2",
    "spidev",
]

[project.scripts]
pumpkin-pi = "pumpkin_pi.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
